Sending translation for Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: virt-manager.tip\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-14 17:10-0500\n"
-"PO-Revision-Date: 2009-12-18 12:54-0300\n"
-"Last-Translator: Héctor Daniel Cabrera <logan@fedoraproject.org>\n"
+"PO-Revision-Date: 2009-12-24 10:15-0300\n"
+"Last-Translator: Claudio Rodrigo Pereyra Diaz <claudio@pereyradiaz.com.ar>\n"
 "Language-Team: Fedora Spanish <fedora-trans-es@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -638,12 +638,10 @@ msgid "A media path must be specified."
 msgstr "Una ruta al medio debe ser especificada"
 
 #: ../src/virtManager/choosecd.py:158
-#, fuzzy
 msgid "Floppy D_rive"
 msgstr "U_nidad de disquete"
 
 #: ../src/virtManager/choosecd.py:159
-#, fuzzy
 msgid "Floppy _Image"
 msgstr "_Imagen de disquete"
 
@@ -1381,7 +1379,6 @@ msgid "On CPU"
 msgstr "En CPU"
 
 #: ../src/virtManager/details.py:440
-#, fuzzy
 msgid "Pinning"
 msgstr "Asociando"
 
@@ -1434,12 +1431,12 @@ msgid "Screenshot saved"
 msgstr "Foto guardada"
 
 #: ../src/virtManager/details.py:1073
-#, fuzzy, python-format
+#, python-format
 msgid "Error building pin list: %s"
 msgstr "Error al construir lista asociada: %s"
 
 #: ../src/virtManager/details.py:1079
-#, fuzzy, python-format
+#, python-format
 msgid "Error pinning vcpus: %s"
 msgstr "Error asociando vcpus: %s"
 
@@ -1491,7 +1488,6 @@ msgid "VCPU info only available for running domain."
 msgstr "VCPU info se encuentra disponible solamente para el dominio en ejecución."
 
 #: ../src/virtManager/details.py:1422
-#, fuzzy
 msgid "Virtual machine does not support runtime VPCU info."
 msgstr "La máquina virtual no tiene soporte para info de tiempo de ejecución de VCPU."
 
@@ -1525,7 +1521,6 @@ msgid "Primary Console"
 msgstr "Consola Primaria"
 
 #: ../src/virtManager/details.py:1852
-#, fuzzy
 msgid "Tablet"
 msgstr "Tablet"
 
@@ -1820,7 +1815,6 @@ msgid "_Pause"
 msgstr "_Pausa"
 
 #: ../src/virtManager/manager.py:329
-#, fuzzy
 msgid "R_esume"
 msgstr "R_eanudar"
 
@@ -1829,7 +1823,6 @@ msgstr "R_eanudar"
 #: ../src/virtManager/systray.py:151
 #: ../src/virtManager/systray.py:169
 #: ../src/virtManager/uihelpers.py:422
-#, fuzzy
 msgid "_Shut Down"
 msgstr "_Apagar"
 
@@ -1838,7 +1831,6 @@ msgstr "_Apagar"
 #: ../src/virtManager/systray.py:144
 #: ../src/virtManager/uihelpers.py:416
 #: ../src/vmm-details.glade.h:122
-#, fuzzy
 msgid "_Reboot"
 msgstr "_Reiniciar"
 
@@ -1846,15 +1838,13 @@ msgstr "_Reiniciar"
 #: ../src/virtManager/systray.py:158
 #: ../src/virtManager/uihelpers.py:428
 #: ../src/vmm-details.glade.h:112
-#, fuzzy
 msgid "_Force Off"
 msgstr "_Forzar apagado"
 
 #: ../src/virtManager/manager.py:371
 #: ../src/vmm-details.glade.h:117
-#, fuzzy
 msgid "_Migrate..."
-msgstr "_Migrar"
+msgstr "_Migrar..."
 
 #: ../src/virtManager/manager.py:424
 #: ../src/vmm-details.glade.h:110
@@ -1959,9 +1949,8 @@ msgid "A valid destination connection must be selected."
 msgstr "Debe seleccionarse una conexión de destino válida."
 
 #: ../src/virtManager/migrate.py:238
-#, fuzzy
 msgid "Could not determine remotely accessible hostname for destination connection."
-msgstr "No es posible determinar la accesibilidad del nombre del equipo en forma remota para la conexión de destino."
+msgstr "No es posible determinar el nombre del equipo accediendo remotamente para la conexión de destino."
 
 #: ../src/virtManager/migrate.py:294
 msgid "No connections available."
@@ -2033,7 +2022,6 @@ msgid "Cannot use local storage on remote connection."
 msgstr "No es posible utilizar almacenamiento local en conexión remota."
 
 #: ../src/virtManager/systray.py:130
-#, fuzzy
 msgid "_Resume"
 msgstr "_Reanudar"
 
@@ -2238,9 +2226,8 @@ msgid "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Video Device
 msgstr "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Dispositivo de video</span>"
 
 #: ../src/vmm-add-hardware.glade.h:24
-#, fuzzy
 msgid "A_utomatically allocated"
-msgstr "Alojado a_utomáticamente"
+msgstr "Asignados a_utomáticamente"
 
 #: ../src/vmm-add-hardware.glade.h:25
 msgid "Add new virtual hardware"
@@ -2251,7 +2238,6 @@ msgid "Allocate entire virtual disk now"
 msgstr "Asignar disco virtual entero ahora"
 
 #: ../src/vmm-add-hardware.glade.h:27
-#, fuzzy
 msgid "B_lock device (partition):"
 msgstr "Dispositivo de b_loque (partición):"
 
@@ -2260,7 +2246,6 @@ msgid "Browse..."
 msgstr "Explorar..."
 
 #: ../src/vmm-add-hardware.glade.h:29
-#, fuzzy
 msgid "D_evice model:"
 msgstr "Modelo de d_ispositivo:"
 
@@ -2269,12 +2254,10 @@ msgid "Device Type Field"
 msgstr "Campo de tipo de dispositivo"
 
 #: ../src/vmm-add-hardware.glade.h:31
-#, fuzzy
 msgid "Device _Type:"
 msgstr "_Tipo de dispositivo:"
 
 #: ../src/vmm-add-hardware.glade.h:32
-#, fuzzy
 msgid "F_ile (disk image):"
 msgstr "A_rchivo (imagen de disco):"
 
@@ -2287,12 +2270,10 @@ msgid "File Size Field"
 msgstr "Campo de tamaño del archivo"
 
 #: ../src/vmm-add-hardware.glade.h:35
-#, fuzzy
 msgid "H_ost:"
 msgstr "E_quipo:"
 
 #: ../src/vmm-add-hardware.glade.h:36
-#, fuzzy
 msgid "Ha_rdware type:"
 msgstr "Tipo de ha_rdware:"
 
@@ -2309,7 +2290,6 @@ msgid "Listen on all public network interfaces "
 msgstr "Escuchando en todas las interfaces de red públicas "
 
 #: ../src/vmm-add-hardware.glade.h:40
-#, fuzzy
 msgid "Loc_ation:"
 msgstr "Ub_icación:"
 
@@ -2325,7 +2305,6 @@ msgid "MB"
 msgstr "MB"
 
 #: ../src/vmm-add-hardware.glade.h:43
-#, fuzzy
 msgid "Pa_ssword:"
 msgstr "Co_ntraseña:"
 
@@ -2370,7 +2349,6 @@ msgstr ""
 "con el que conectarse con la máquina virtual."
 
 #: ../src/vmm-add-hardware.glade.h:54
-#, fuzzy
 msgid "Po_rt:"
 msgstr "Pu_erto:"
 
@@ -2384,17 +2362,14 @@ msgstr "Utilice Te_lnet:"
 
 #: ../src/vmm-add-hardware.glade.h:58
 #: ../src/vmm-migrate.glade.h:9
-#, fuzzy
 msgid "_Address:"
 msgstr "_Dirección:"
 
 #: ../src/vmm-add-hardware.glade.h:59
-#, fuzzy
 msgid "_Bind Host:"
-msgstr "Equipo _asociado:"
+msgstr "Equipo _vinculado:"
 
 #: ../src/vmm-add-hardware.glade.h:60
-#, fuzzy
 msgid "_Device type:"
 msgstr "Tipo de _dispositivo:"
 
@@ -2411,13 +2386,11 @@ msgid "_Finish"
 msgstr "_Finalizar"
 
 #: ../src/vmm-add-hardware.glade.h:63
-#, fuzzy
 msgid "_Keymap:"
 msgstr "_Mapa de teclado:"
 
 #: ../src/vmm-add-hardware.glade.h:64
 #: ../src/vmm-choose-cd.glade.h:7
-#, fuzzy
 msgid "_Location:"
 msgstr "_Ubicación:"
 
@@ -2427,28 +2400,23 @@ msgstr "Dirección _MAC:"
 
 #: ../src/vmm-add-hardware.glade.h:66
 #: ../src/vmm-create-net.glade.h:54
-#, fuzzy
 msgid "_Mode:"
 msgstr "_Modo:"
 
 #: ../src/vmm-add-hardware.glade.h:67
-#, fuzzy
 msgid "_Model:"
 msgstr "_Modelo:"
 
 #: ../src/vmm-add-hardware.glade.h:68
-#, fuzzy
 msgid "_Other:"
 msgstr "_Otro:"
 
 #: ../src/vmm-add-hardware.glade.h:69
-#, fuzzy
 msgid "_Path:"
 msgstr "_Ruta:"
 
 #: ../src/vmm-add-hardware.glade.h:70
 #: ../src/vmm-migrate.glade.h:12
-#, fuzzy
 msgid "_Port:"
 msgstr "_Puerto:"
 
@@ -2458,7 +2426,6 @@ msgstr "_Tamaño"
 
 #: ../src/vmm-add-hardware.glade.h:72
 #: ../src/vmm-create-pool.glade.h:17
-#, fuzzy
 msgid "_Type:"
 msgstr "_Tipo:"
 
@@ -2476,7 +2443,6 @@ msgid "<b>Choose Source Device or File</b>"
 msgstr "<b>Elija dispositivo fuente o archivo</b>"
 
 #: ../src/vmm-choose-cd.glade.h:2
-#, fuzzy
 msgid "CD-_ROM or DVD"
 msgstr "CD-_ROM o DVD:"
 
@@ -2506,9 +2472,8 @@ msgid "<span color='#484848'>Networking:</span>"
 msgstr "<span color='#484848'>Entorno de red:</span>"
 
 #: ../src/vmm-clone.glade.h:3
-#, fuzzy
 msgid "<span color='#484848'>New _Path:</span>"
-msgstr "<span color='#484848'>Nueva _ruta:</span>"
+msgstr "<span color='#484848'>Nueva _Ruta:</span>"
 
 #: ../src/vmm-clone.glade.h:4
 msgid "<span color='#484848'>Path:</span>"
@@ -2532,7 +2497,6 @@ msgid "<span color='#484848'>Type:</span>"
 msgstr "<span color='#484848'>Tipo:</span>"
 
 #: ../src/vmm-clone.glade.h:9
-#, fuzzy
 msgid "<span color='#484848'>_Name:</span>"
 msgstr "<span color='#484848'>_Nombre:</span>"
 
@@ -2549,7 +2513,6 @@ msgstr ""
 "Al compartir se utiliza la imagen de disco ya existente, tanto por la máquina original, como por la nueva.</span> "
 
 #: ../src/vmm-clone.glade.h:13
-#, fuzzy
 msgid "C_lone"
 msgstr "_Clonar"
 
@@ -2578,7 +2541,6 @@ msgid "Existing disk"
 msgstr "Disco existente"
 
 #: ../src/vmm-clone.glade.h:20
-#, fuzzy
 msgid "New _MAC:"
 msgstr "Nueva _MAC:"
 
@@ -2667,7 +2629,6 @@ msgid "DHCP"
 msgstr "DHCP"
 
 #: ../src/vmm-create-net.glade.h:20
-#, fuzzy
 msgid "E_nd:"
 msgstr "F_in:"
 
@@ -2774,17 +2735,14 @@ msgid "You will need to choose an IPv4 address space for the virtual network:"
 msgstr "Necesitará elegir el espacio de direcciones IPv4 para la red virtual:"
 
 #: ../src/vmm-create-net.glade.h:50
-#, fuzzy
 msgid "_Destination:"
 msgstr "_Destino:"
 
 #: ../src/vmm-create-net.glade.h:51
-#, fuzzy
 msgid "_Enable DHCP:"
 msgstr "_Habilitar DHCP:"
 
 #: ../src/vmm-create-net.glade.h:53
-#, fuzzy
 msgid "_Isolated virtual network"
 msgstr "Red virtual _aislada"
 
@@ -2793,9 +2751,8 @@ msgid "_Network:"
 msgstr "_Red:"
 
 #: ../src/vmm-create-net.glade.h:56
-#, fuzzy
 msgid "_Start:"
-msgstr "_Inicio:"
+msgstr "_Iniciar:"
 
 #: ../src/vmm-create-pool.glade.h:1
 msgid "<span size='x-large'>Add Storage Pool</span>"
@@ -2806,27 +2763,22 @@ msgid "Add a New Storage Pool"
 msgstr "Añadir un nuev grupo de almacenamiento"
 
 #: ../src/vmm-create-pool.glade.h:3
-#, fuzzy
 msgid "B_rowse"
 msgstr "E_xplorar"
 
 #: ../src/vmm-create-pool.glade.h:4
-#, fuzzy
 msgid "B_uild Pool:"
 msgstr "C_onstruir grupo:"
 
 #: ../src/vmm-create-pool.glade.h:5
-#, fuzzy
 msgid "Bro_wse"
 msgstr "Exp_lorar"
 
 #: ../src/vmm-create-pool.glade.h:6
-#, fuzzy
 msgid "F_ormat:"
 msgstr "F_ormato:"
 
 #: ../src/vmm-create-pool.glade.h:8
-#, fuzzy
 msgid "Host Na_me:"
 msgstr "Nom_bre del equipo:"
 
@@ -2849,12 +2801,10 @@ msgid "_Name:"
 msgstr "_Nombre:"
 
 #: ../src/vmm-create-pool.glade.h:15
-#, fuzzy
 msgid "_Source Path:"
 msgstr "Ruta _fuente:"
 
 #: ../src/vmm-create-pool.glade.h:16
-#, fuzzy
 msgid "_Target Path:"
 msgstr "Ruta _destino:"
 
@@ -2907,7 +2857,6 @@ msgid "Create a storage unit that can be used directly by a virtual machine."
 msgstr "Crear unidad de almacenaje que puede ser usada directamente por la máquina virtual."
 
 #: ../src/vmm-create-vol.glade.h:20
-#, fuzzy
 msgid "Max Ca_pacity:"
 msgstr "Máxima ca_pacidad:"
 
@@ -2916,7 +2865,6 @@ msgid "_Allocation:"
 msgstr "_Alojamiento:"
 
 #: ../src/vmm-create-vol.glade.h:23
-#, fuzzy
 msgid "_Format:"
 msgstr "_Formato:"
 
@@ -2958,22 +2906,18 @@ msgid "Advanced options"
 msgstr "Opciones avanzadas"
 
 #: ../src/vmm-create.glade.h:10
-#, fuzzy
 msgid "B_rowse..."
 msgstr "E_xplorar..."
 
 #: ../src/vmm-create.glade.h:11
-#, fuzzy
 msgid "Bro_wse..."
 msgstr "Exp_lorar..."
 
 #: ../src/vmm-create.glade.h:12
-#, fuzzy
 msgid "C_PUs:"
 msgstr "C_PUs"
 
 #: ../src/vmm-create.glade.h:13
-#, fuzzy
 msgid "C_onnection:"
 msgstr "C_onexión:"
 
@@ -3030,21 +2974,18 @@ msgid "Memory"
 msgstr "Memoria"
 
 #: ../src/vmm-create.glade.h:29
-#, fuzzy
 msgid "Network _Boot (PXE)"
-msgstr "_Arranque desde Red (PXE)"
+msgstr "_Arranque por Red (PXE)"
 
 #: ../src/vmm-create.glade.h:30
-#, fuzzy
 msgid "Network _Install (HTTP, FTP, or NFS)"
-msgstr "_Instalación desde red (HTTP, FTP, ó NFS)"
+msgstr "_Instalación por Red (HTTP, FTP, ó NFS)"
 
 #: ../src/vmm-create.glade.h:31
 msgid "New VM"
 msgstr "Nueva MV"
 
 #: ../src/vmm-create.glade.h:32
-#, fuzzy
 msgid "OS _type:"
 msgstr "_Tipo de SO:"
 
@@ -3061,9 +3002,8 @@ msgid "Select _managed or other existing storage"
 msgstr "Elija _administrado, o algún otro tipo de almacenamiento existente"
 
 #: ../src/vmm-create.glade.h:36
-#, fuzzy
 msgid "Set a fixed _MAC address"
-msgstr "Define una dirección _MAC estática"
+msgstr "Definir una dirección _MAC estática"
 
 #: ../src/vmm-create.glade.h:38
 msgid "URL"
@@ -3082,9 +3022,8 @@ msgid "Use CD_ROM or DVD"
 msgstr "Utilice CD_ROM o DVD"
 
 #: ../src/vmm-create.glade.h:42
-#, fuzzy
 msgid "Use _ISO image:"
-msgstr "Utilice la imagen _ISO:"
+msgstr "Utilizar imagen _ISO:"
 
 #: ../src/vmm-create.glade.h:43
 msgid "_Allocate entire disk now"
@@ -3103,7 +3042,6 @@ msgid "_GB"
 msgstr "_GB"
 
 #: ../src/vmm-create.glade.h:48
-#, fuzzy
 msgid "_Local install media (ISO image or CDROM)"
 msgstr "Medio de instalación _local (Imagen ISO ó CDROM)"
 
@@ -3116,9 +3054,8 @@ msgid "_Version:"
 msgstr "_Versión:"
 
 #: ../src/vmm-create.glade.h:52
-#, fuzzy
 msgid "_Virt Type:"
-msgstr "Tipo de _virtualización:"
+msgstr "Tipo de _Virtualización:"
 
 #: ../src/vmm-delete.glade.h:1
 msgid "Delete Confirmation"
@@ -3149,7 +3086,6 @@ msgid "<b>Boot Device</b>"
 msgstr "<b>Dispositivo de arranque</b>"
 
 #: ../src/vmm-details.glade.h:6
-#, fuzzy
 msgid "<b>CPU Pinning</b>"
 msgstr "<b>Asociado de CPU</b>"
 
@@ -3211,7 +3147,6 @@ msgid "<b>insert type</b>"
 msgstr "<b>ingresar tipo</b>"
 
 #: ../src/vmm-details.glade.h:22
-#, fuzzy
 msgid "A_dd Hardware"
 msgstr "A_gregar hardware"
 
@@ -3241,12 +3176,10 @@ msgid "C_lock Offset:"
 msgstr "Offset del R_eloj:"
 
 #: ../src/vmm-details.glade.h:30
-#, fuzzy
 msgid "Change a_llocation:"
-msgstr "Modificar a_lojamiento:"
+msgstr "Modificar a_signación:"
 
 #: ../src/vmm-details.glade.h:31
-#, fuzzy
 msgid "Char"
 msgstr "Caracter"
 
@@ -3279,7 +3212,6 @@ msgid "Device model:"
 msgstr "Modelo de dispositivo:"
 
 #: ../src/vmm-details.glade.h:40
-#, fuzzy
 msgid "Device virtual machine will _boot from:"
 msgstr "El dispositivo de la máquina virtual _arrancará desde:"
 
@@ -3321,19 +3253,16 @@ msgid "Hypervisor:"
 msgstr "Hipervisor:"
 
 #: ../src/vmm-details.glade.h:51
-#, fuzzy
 msgid "Initial _pinning:"
-msgstr "_asociación inicial:"
+msgstr "_Asociación inicial:"
 
 #: ../src/vmm-details.glade.h:56
-#, fuzzy
 msgid "M_odel:"
 msgstr "M_odelo:"
 
 #: ../src/vmm-details.glade.h:57
-#, fuzzy
 msgid "Ma_ximum allocation:"
-msgstr "Alojamiento má_ximo:"
+msgstr "Asignación má_xima:"
 
 #: ../src/vmm-details.glade.h:58
 msgid "Max Memory Select"
@@ -3395,7 +3324,6 @@ msgid "Power on the virtual machine"
 msgstr "Iniciar la máquina virtual"
 
 #: ../src/vmm-details.glade.h:75
-#, fuzzy
 msgid "Proc"
 msgstr "Procesador"
 
@@ -3404,7 +3332,6 @@ msgid "RAM:"
 msgstr "RAM:"
 
 #: ../src/vmm-details.glade.h:77
-#, fuzzy
 msgid "R_eadonly:"
 msgstr "S_olo lectura:"
 
@@ -3413,19 +3340,16 @@ msgid "Run"
 msgstr "Ejecutar"
 
 #: ../src/vmm-details.glade.h:79
-#, fuzzy
 msgid "S_hut Down"
 msgstr "_Apagar"
 
 #: ../src/vmm-details.glade.h:80
-#, fuzzy
 msgid "Send _Key"
-msgstr "Enviar _tecla"
+msgstr "Enviar _Tecla"
 
 #: ../src/vmm-details.glade.h:81
-#, fuzzy
 msgid "Sharea_ble:"
-msgstr "Posible de ser compartido:"
+msgstr "Comparti_bles:"
 
 #: ../src/vmm-details.glade.h:82
 msgid "Show the graphical console"
@@ -3474,7 +3398,6 @@ msgid "Switch to fullscreen view"
 msgstr "Cambiar a modo de pantalla completa"
 
 #: ../src/vmm-details.glade.h:95
-#, fuzzy
 msgid "T_oolbar"
 msgstr "B_arra de Herramientas"
 
@@ -3537,7 +3460,6 @@ msgid "_File"
 msgstr "_Archivo"
 
 #: ../src/vmm-details.glade.h:113
-#, fuzzy
 msgid "_Fullscreen"
 msgstr "_Pantalla completa"
 
@@ -3592,7 +3514,6 @@ msgid "_Take Screenshot"
 msgstr "Tomar _Foto"
 
 #: ../src/vmm-details.glade.h:130
-#, fuzzy
 msgid "_Text Consoles"
 msgstr "Consolas de _texto"
 
@@ -3765,7 +3686,6 @@ msgid "Show the virtual machine console and details"
 msgstr "Mostar detalles y consola de la máquina virtual"
 
 #: ../src/vmm-manager.glade.h:9
-#, fuzzy
 msgid "_CPU Usage"
 msgstr "Utilización del _CPU"
 
@@ -3828,7 +3748,6 @@ msgid "Migrate the virtual machine"
 msgstr "Migrar la máquina virtual"
 
 #: ../src/vmm-migrate.glade.h:10
-#, fuzzy
 msgid "_Bandwidth:"
 msgstr "_Ancho de banda:"
 
@@ -3837,9 +3756,8 @@ msgid "_Migrate"
 msgstr "_Migrar"
 
 #: ../src/vmm-migrate.glade.h:13
-#, fuzzy
 msgid "_Tunnel migration through libvirt's daemon:"
-msgstr "Migración _tunelizada mediante el demonio de libvirt:"
+msgstr "Migración por _túnel mediante el demonio de libvirt:"
 
 #: ../src/vmm-open-connection.glade.h:2
 msgid "Add Connection"
@@ -3858,7 +3776,6 @@ msgid "Connection Select"
 msgstr "Elección de la conexión"
 
 #: ../src/vmm-open-connection.glade.h:6
-#, fuzzy
 msgid "H_ostname:"
 msgstr "Nombre del e_quipo:"
 
@@ -3927,9 +3844,8 @@ msgid "Device re_moval:"
 msgstr "El_iminación de dispositivo:"
 
 #: ../src/vmm-preferences.glade.h:9
-#, fuzzy
 msgid "Enable _system tray icon"
-msgstr "Habilitar icono en el _area de notificación"
+msgstr "Habilitar icono en el área de _notificación"
 
 #: ../src/vmm-preferences.glade.h:10
 msgid "Feedback"
@@ -3952,7 +3868,6 @@ msgid "Install Audio Device:"
 msgstr "Instalar dispositivo de audio:"
 
 #: ../src/vmm-preferences.glade.h:15
-#, fuzzy
 msgid "Maintain h_istory of"
 msgstr "Mantener la h_istoria de"
 
@@ -4011,7 +3926,6 @@ msgid "_Pause:"
 msgstr "_Pausa:"
 
 #: ../src/vmm-preferences.glade.h:34
-#, fuzzy
 msgid "_Remote virtual machine"
 msgstr "Máquina virtual _remota"
 
