Sending translation for Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-14 17:10-0500\n"
-"PO-Revision-Date: 2009-12-31 13:51+0200\n"
+"PO-Revision-Date: 2009-12-31 14:36+0200\n"
 "Last-Translator:  <>\n"
 "Language-Team:  <>\n"
 "MIME-Version: 1.0\n"
@@ -317,9 +317,8 @@ msgstr ""
 
 #: ../src/virtManager/addhardware.py:480 ../src/virtManager/addhardware.py:793
 #: ../src/virtManager/details.py:1579
-#, fuzzy
 msgid "VNC server"
-msgstr "Никогда"
+msgstr "VNC сервер"
 
 #: ../src/virtManager/addhardware.py:481 ../src/virtManager/addhardware.py:793
 #: ../src/virtManager/details.py:1584
@@ -396,7 +395,7 @@ msgstr "Тип:"
 
 #: ../src/virtManager/addhardware.py:785 ../src/vmm-details.glade.h:64
 msgid "Mode:"
-msgstr ""
+msgstr "Режим:"
 
 #: ../src/virtManager/addhardware.py:787
 msgid "Pointer"
@@ -436,7 +435,7 @@ msgstr "Пароль:"
 
 #: ../src/virtManager/addhardware.py:814 ../src/vmm-details.glade.h:53
 msgid "Keymap:"
-msgstr ""
+msgstr "Раскладка:"
 
 #: ../src/virtManager/addhardware.py:816
 msgid "Graphics"
@@ -635,9 +634,8 @@ msgid "Floppy _Image"
 msgstr ""
 
 #: ../src/virtManager/clone.py:222 ../src/virtManager/clone.py:438
-#, fuzzy
 msgid "Details..."
-msgstr "Подробности"
+msgstr "Детали..."
 
 #: ../src/virtManager/clone.py:253
 #, fuzzy
@@ -645,9 +643,8 @@ msgid "Usermode"
 msgstr "Хост:"
 
 #: ../src/virtManager/clone.py:265
-#, fuzzy
 msgid "Virtual Network"
-msgstr "Виртуальные сети"
+msgstr "Виртуальная Сеть"
 
 #: ../src/virtManager/clone.py:337
 msgid "Nothing to clone."
@@ -655,7 +652,7 @@ msgstr ""
 
 #: ../src/virtManager/clone.py:430
 msgid "Clone this disk"
-msgstr ""
+msgstr "Клонировать этот диск"
 
 #: ../src/virtManager/clone.py:434
 #, python-format
@@ -1068,7 +1065,7 @@ msgstr ""
 
 #: ../src/virtManager/create.py:1384
 msgid "Creating Virtual Machine"
-msgstr "Виртуальная машина создается"
+msgstr "Создание Виртуальной Машины"
 
 #: ../src/virtManager/create.py:1385
 msgid ""
@@ -1081,28 +1078,25 @@ msgid "Guest installation failed to complete"
 msgstr "Гостевая установка не завершена из-за ошибки"
 
 #: ../src/virtManager/create.py:1558
-#, fuzzy
 msgid "Detecting"
-msgstr "Тип соединения:"
+msgstr "Обнаружение"
 
 #: ../src/virtManager/createnet.py:106
-#, fuzzy
 msgid "Any physical device"
-msgstr "NAT на любое физическое устройство"
+msgstr "Любое физическое устройство"
 
 #: ../src/virtManager/createnet.py:109
-#, fuzzy, python-format
+#, python-format
 msgid "Physical device %s"
-msgstr "NAT на физическое устройство %s"
+msgstr "Физическое устройство %s"
 
 #: ../src/virtManager/createnet.py:120 ../src/virtManager/network.py:36
 msgid "NAT"
 msgstr "NAT"
 
 #: ../src/virtManager/createnet.py:121
-#, fuzzy
 msgid "Routed"
-msgstr "Маршут"
+msgstr "Маршрутизируются"
 
 #: ../src/virtManager/createnet.py:182
 #, python-format
@@ -1497,11 +1491,11 @@ msgstr "Создать новую виртуальную сеть"
 
 #: ../src/virtManager/details.py:1549
 msgid "Xen Mouse"
-msgstr ""
+msgstr "Xen Мышь"
 
 #: ../src/virtManager/details.py:1551
 msgid "PS/2 Mouse"
-msgstr ""
+msgstr "PS/2 Мышь"
 
 #: ../src/virtManager/details.py:1556
 msgid "Absolute Movement"
@@ -1512,14 +1506,12 @@ msgid "Relative Movement"
 msgstr ""
 
 #: ../src/virtManager/details.py:1581
-#, fuzzy
 msgid "Automatically allocated"
-msgstr "Автоматически открыть консоли:"
+msgstr "Автоматический выделяется"
 
 #: ../src/virtManager/details.py:1620
-#, fuzzy
 msgid "Primary Console"
-msgstr "Последовательная _консоль:"
+msgstr "Основная Консоль"
 
 #: ../src/virtManager/details.py:1852
 #, fuzzy
@@ -1527,29 +1519,27 @@ msgid "Tablet"
 msgstr "Приемник:"
 
 #: ../src/virtManager/details.py:1855
-#, fuzzy
 msgid "Mouse"
-msgstr "Пауза"
+msgstr "Мышь"
 
 #: ../src/virtManager/details.py:1857 ../src/vmm-details.glade.h:52
-#, fuzzy
 msgid "Input"
-msgstr "Введение"
+msgstr "Ввод"
 
 #: ../src/virtManager/details.py:1865
 #, python-format
 msgid "Display %s"
-msgstr ""
+msgstr "Дисплей %s"
 
 #: ../src/virtManager/details.py:1872
 #, python-format
 msgid "Sound: %s"
-msgstr ""
+msgstr "Звук %s"
 
 #: ../src/virtManager/details.py:1969
 #, fuzzy
 msgid "No Boot Device"
-msgstr "Устройство:"
+msgstr "Отсутствует Устройство Загрузки"
 
 #: ../src/virtManager/domain.py:1174
 msgid "Running"
@@ -1675,7 +1665,7 @@ msgstr "Менеджер вирт.машины"
 
 #: ../src/virtManager/error.py:28
 msgid "Error"
-msgstr ""
+msgstr "Ошибка"
 
 #. Expander section with details.
 #: ../src/virtManager/error.py:46 ../src/vmm-details.glade.h:36
@@ -1683,9 +1673,8 @@ msgid "Details"
 msgstr "Подробности"
 
 #: ../src/virtManager/error.py:109
-#, fuzzy
 msgid "Input Error"
-msgstr "Введение"
+msgstr "Ошибка Ввода"
 
 #: ../src/virtManager/host.py:154
 msgid "Copy Volume Path"
@@ -1694,7 +1683,7 @@ msgstr ""
 #: ../src/virtManager/host.py:258
 #, python-format
 msgid "%(currentmem)s of %(maxmem)s"
-msgstr ""
+msgstr "%(currentmem)s из %(maxmem)s"
 
 #: ../src/virtManager/host.py:285
 #, fuzzy, python-format
@@ -1704,17 +1693,17 @@ msgstr "Вы действительно хотите использовать д
 #: ../src/virtManager/host.py:292
 #, python-format
 msgid "Error deleting network: %s"
-msgstr ""
+msgstr "Ошибка удаления сети: %s"
 
 #: ../src/virtManager/host.py:303
 #, python-format
 msgid "Error starting network: %s"
-msgstr ""
+msgstr "Ошибка запуска сети: %s"
 
 #: ../src/virtManager/host.py:314
 #, python-format
 msgid "Error stopping network: %s"
-msgstr ""
+msgstr "Ошибка остановки сети: %s"
 
 #: ../src/virtManager/host.py:323
 #, python-format
@@ -1845,14 +1834,12 @@ msgid "CPU usage"
 msgstr "Использование CPU"
 
 #: ../src/virtManager/manager.py:449
-#, fuzzy
 msgid "Disk I/O"
-msgstr "Диск"
+msgstr "Дисковый В/В"
 
 #: ../src/virtManager/manager.py:450
-#, fuzzy
 msgid "Network I/O"
-msgstr "Сеть"
+msgstr "Сетевой В/В"
 
 #: ../src/virtManager/manager.py:627
 msgid "Restoring virtual machines over remote connections is not yet supported"
@@ -1910,7 +1897,7 @@ msgstr ""
 
 #: ../src/virtManager/manager.py:828
 msgid "Double click to connect"
-msgstr ""
+msgstr "Двойной клик для подключения"
 
 #: ../src/virtManager/manager.py:1126
 msgid "Disabled in preferences dialog."
@@ -1926,7 +1913,7 @@ msgstr ""
 
 #: ../src/virtManager/migrate.py:122
 msgid "Migrate"
-msgstr ""
+msgstr "Миграция"
 
 #: ../src/virtManager/migrate.py:156
 msgid "Libvirt version does not support tunnelled migration."
@@ -1944,7 +1931,7 @@ msgstr ""
 #: ../src/virtManager/migrate.py:294
 #, fuzzy
 msgid "No connections available."
-msgstr "Тип соединения:"
+msgstr "Нет доступных подключений."
 
 #: ../src/virtManager/migrate.py:363
 msgid "Connection hypervisors do not match."
@@ -1998,13 +1985,12 @@ msgid "Isolated network"
 msgstr "Изолированная виртуальная сеть"
 
 #: ../src/virtManager/storagebrowse.py:133
-#, fuzzy
 msgid "Size"
-msgstr "Размер:"
+msgstr "Размер"
 
 #: ../src/virtManager/storagebrowse.py:140 ../src/vmm-create-pool.glade.h:7
 msgid "Format"
-msgstr ""
+msgstr "Формат"
 
 #: ../src/virtManager/storagebrowse.py:147
 msgid "Used By"
@@ -2034,7 +2020,7 @@ msgstr "Пользовательский режим сети"
 
 #: ../src/virtManager/uihelpers.py:68
 msgid "Bridge"
-msgstr ""
+msgstr "Мост"
 
 #: ../src/virtManager/uihelpers.py:70
 msgid "Virtual network"
@@ -2129,7 +2115,9 @@ msgstr "Предоставлено libvirt"
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/vmm-about.glade.h:4
 msgid "translator-credits"
-msgstr "Nikolay Sivov <bunglehead@gmail.com>, 2007"
+msgstr ""
+"Nikolay Sivov <bunglehead@gmail.com>, 2007\n"
+"Anatoliy Guskov <anatoliy.guskov@gmail.com>, 2009"
 
 #: ../src/vmm-add-hardware.glade.h:1
 #, fuzzy
@@ -3158,7 +3146,7 @@ msgstr "_Тип ОС:"
 
 #: ../src/vmm-create.glade.h:33
 msgid "PXE"
-msgstr ""
+msgstr "PXE"
 
 #: ../src/vmm-create.glade.h:34
 #, fuzzy
@@ -3200,9 +3188,8 @@ msgid "_Allocate entire disk now"
 msgstr "Занять весь виртуальный диск?"
 
 #: ../src/vmm-create.glade.h:44
-#, fuzzy
 msgid "_Architecture:"
-msgstr "Архитектура:"
+msgstr "_Архитектура:"
 
 #: ../src/vmm-create.glade.h:45
 #, fuzzy
@@ -3210,9 +3197,8 @@ msgid "_Enable storage for this virtual machine"
 msgstr "Виртуальная машина сохраняется"
 
 #: ../src/vmm-create.glade.h:47
-#, fuzzy
 msgid "_GB"
-msgstr "5 Гб"
+msgstr "_ГБ"
 
 #: ../src/vmm-create.glade.h:48
 msgid "_Local install media (ISO image or CDROM)"
@@ -3380,32 +3366,28 @@ msgid "Connect or disconnect media"
 msgstr "Тип соединения:"
 
 #: ../src/vmm-details.glade.h:33
-#, fuzzy
 msgid "Console"
-msgstr "Последовательная _консоль:"
+msgstr "Консоль"
 
 #: ../src/vmm-details.glade.h:34
 msgid "Current allocation:"
-msgstr "Текущее назначение:"
+msgstr "Текущее выделение:"
 
 #: ../src/vmm-details.glade.h:35
 msgid "D_ynamic"
 msgstr ""
 
 #: ../src/vmm-details.glade.h:37
-#, fuzzy
 msgid "Device Model:"
-msgstr "Устройство:"
+msgstr "Модель Устройства:"
 
 #: ../src/vmm-details.glade.h:38
-#, fuzzy
 msgid "Device Type:"
-msgstr "Устройство:"
+msgstr "Тип Устройства:"
 
 #: ../src/vmm-details.glade.h:39
-#, fuzzy
 msgid "Device model:"
-msgstr "Устройство:"
+msgstr "Модель устройства:"
 
 #: ../src/vmm-details.glade.h:40
 #, fuzzy
@@ -3425,11 +3407,11 @@ msgstr "Диск"
 
 #: ../src/vmm-details.glade.h:45
 msgid "Emulator:"
-msgstr ""
+msgstr "Эмулятор:"
 
 #: ../src/vmm-details.glade.h:46
 msgid "Enable A_CPI:"
-msgstr ""
+msgstr "Включить A_CPI:"
 
 #: ../src/vmm-details.glade.h:47
 msgid "Enable A_PIC:"
@@ -3458,9 +3440,8 @@ msgid "M_odel:"
 msgstr "Устройство:"
 
 #: ../src/vmm-details.glade.h:57
-#, fuzzy
 msgid "Ma_ximum allocation:"
-msgstr "Макс. выделение:"
+msgstr "Ма_ксим. выделение:"
 
 #: ../src/vmm-details.glade.h:58
 msgid "Max Memory Select"
@@ -3806,9 +3787,8 @@ msgid "DHCP start:"
 msgstr "Начало DHCP:"
 
 #: ../src/vmm-host.glade.h:16
-#, fuzzy
 msgid "Delete Network"
-msgstr "Сеть"
+msgstr "Удалить Сеть"
 
 #: ../src/vmm-host.glade.h:17
 msgid "Delete Pool"
@@ -3835,9 +3815,8 @@ msgid "Logical CPUs:"
 msgstr "Логические CPU:"
 
 #: ../src/vmm-host.glade.h:25
-#, fuzzy
 msgid "MAC:"
-msgstr "<b>Сеть</b>"
+msgstr "MAC:"
 
 #: ../src/vmm-host.glade.h:26
 msgid "Memory usage:"
@@ -3850,7 +3829,7 @@ msgstr "Память:"
 #: ../src/vmm-host.glade.h:30
 #, fuzzy
 msgid "Network Interfaces"
-msgstr "Сетевой трафик"
+msgstr "Сетевые интерфейсы"
 
 #: ../src/vmm-host.glade.h:32
 msgid "Overview"
@@ -3864,7 +3843,7 @@ msgstr "Тип:"
 #: ../src/vmm-host.glade.h:34
 #, fuzzy
 msgid "Start Network"
-msgstr "Сеть"
+msgstr "Запуск Сети"
 
 #: ../src/vmm-host.glade.h:35
 #, fuzzy
@@ -3905,14 +3884,13 @@ msgid "insert type"
 msgstr "<b>Консоли</b>"
 
 #: ../src/vmm-manager.glade.h:1
-#, fuzzy
 msgid "Create a new virtual machine"
-msgstr "Создать новую виртуальную сеть"
+msgstr "Создать новую виртуальную машину"
 
 #: ../src/vmm-manager.glade.h:2
 #, fuzzy
 msgid "New"
-msgstr "_Вид"
+msgstr "Новая"
 
 #: ../src/vmm-manager.glade.h:5
 msgid "Restore a saved machine from a filesystem image"
@@ -3954,7 +3932,7 @@ msgstr "Сеть"
 
 #: ../src/vmm-manager.glade.h:17
 msgid "_Open"
-msgstr ""
+msgstr "_Окрыть"
 
 #: ../src/vmm-manager.glade.h:20
 msgid "_Shutdown"
@@ -4120,9 +4098,8 @@ msgid "Graphical console _scaling:"
 msgstr "_Графическая консоль"
 
 #: ../src/vmm-preferences.glade.h:14
-#, fuzzy
 msgid "Install Audio Device:"
-msgstr "Источник установки:"
+msgstr "Установка Аудио Устройства:"
 
 #: ../src/vmm-preferences.glade.h:15
 #, fuzzy
